<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_leave"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:background="@drawable/bg_preview"
            android:text="@string/no" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_preview"
            android:text="@string/yes" />

    </LinearLayout>

</LinearLayout>