<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_10sdp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/bg_white_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="@color/colorTitle" />

    <View
        android:background="@color/light_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:id="@+id/btn_upload"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/ic_upload"
                android:src="@drawable/ic_upload"
                android:layout_width="28dp"
                android:layout_height="28dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/upload"
                android:textColor="@color/colorTitle"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:id="@+id/txt_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            tools:ignore="RelativeOverlap,UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_copy"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/copy"
                android:textColor="@color/colorTitle" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/btn_delete"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap,UseCompoundDrawables,UselessParent">

            <ImageView
                android:src="@drawable/ic_clear_all"
                android:layout_width="14dp"
                android:layout_height="14dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:textColor="@color/colorRed"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>